Remove warning for "com.google.inject.internal.cglib.core.$ReflectUtils$1"