@@ -1,2 +1,2 @@
 #/bin/sh
-java -Dconfig=$CONFIG -jar /tmp/Discord2TelegramBot.jar
+java -Dconfig=$CONFIG --add-opens java.base/java.lang=ALL-UNNAMED -jar /tmp/Discord2TelegramBot.jar
